feat: solution p1 and p2 for day 10