@@ -1,2 +1,4 @@
 //> using scala 3.3.4
+//> using dep tools.aqua:z3-turnkey:4.14.1
 //> using option -Wunused:all
+//> using javaOpt --enable-native-access=ALL-UNNAMED
